08-kubernetes-advanced/exercise/minikube-svc-prac-1612/examples/python-web-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-python
  labels:
    app: sample-app-python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app-python
  template:
    metadata:
      labels:
        app: sample-app-python
    spec:
      containers:
      - name: python-container
        image: nightwalker9999/python-sample-app-demo:v1 
        ports:
        - containerPort: 8000
