08-kubernetes-advanced/exercise/minikube-svc-prac-1612/examples/python-web-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-django-app-service
spec:
  type: NodePort
  selector:
    app: sample-app-python
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
